--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Carrie Ybay
 Jared Heck
 Nga La <nga422@gmail.com>
 Laura Roudge <laura.derohan@gmail.com>
+Obisesan Olabode Isaac <2024, obisesanolabode10@gmail.com>
